--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,33 @@
     width: 550px;
     animation: clouds-animation 20s infinite linear;
 }
+.spaceship{
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    transform: rotate(270deg);
+    right: 0;
+    visibility: hidden;
+    animation: none;
+}
+.ballLaser{
+    position: absolute;
+    width: 250px;
+    height: 250px;
+    right: 240px;
+    top: 70px;
+    visibility: hidden;
+    animation: none;
+}
+.laser{
+    position: absolute;
+    height: 100px;
+    transform: rotate(180deg);
+    right: 345px;
+    top: 145px;
+    visibility: hidden;
+    animation: none;
+}
 .score{
     font-family: 'Press Start 2P', cursive;
     position: absolute;
@@ -127,6 +154,44 @@
     }
     to{
         right: 100%;
+    }
+}
+@keyframes boss-animation{
+ from{
+    right:-400px;
+ }
+ to{
+    right: 0;
+ }   
+}
+@keyframes boss-animationPt2{
+    from{
+        right: 0;
+    }
+    to{
+        right:-400px;
+    }   
+   }
+@keyframes ballLaser-animation{
+    0%{
+        opacity: 0.1;
+    }
+    50%{
+        opacity: 0.4;
+    }
+    100%{
+        opacity:1;
+    }
+}
+@keyframes laser-animation{
+    0%{
+        opacity: 1;
+    }
+    50%{
+        opacity: 0.5;
+    }
+    100%{
+        opacity:0;
     }
 }
 @keyframes score-animation{
