--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,23 @@
     position: relative;
     overflow: hidden;
     
-    
 }
-
+.estacao{
+    width: 100%;
+    height: 485px;
+    margin: 0 auto;
+    position: absolute;
+    overflow: hidden;
+}
+.season{
+    font-family: 'Press Start 2P', cursive;
+    position: absolute;
+    font-size: 30px;
+    animation: score-animation 5s infinite ease-in-out;
+}
+.autumn{
+    position: absolute;
+}
 .pipe {
     position: absolute;
     bottom: 0;
