--- a/css/style.css
+++ b/css/style.css
@@ -26,22 +26,17 @@
     font-size: 30px;
     animation: score-animation 5s infinite ease-in-out;
 }
-.autumn{
-    position: absolute;
-}
 .pipe {
     position: absolute;
     bottom: 0;
     width: 80px;
     animation: pipe-animation 1.5s infinite linear;
 }
-
 .mario {
     width: 150px;
     position: absolute;
     bottom: 0;
 }
-
 .jump{
     animation: jump 500ms ease-out;
 }
@@ -227,4 +222,15 @@
     100%{
         color: #ee82ee;
     }
+}
+.text-board{
+    width: 100%;
+    height: 200%;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
